# GLSL-Shader-Trials

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: glad.c  glad.h
docs/: index.html
src/: config.h  guiApplication.hpp  helpers.h  main.cpp  mesh.cpp  mesh.h
src/applications/: HelloWorld.hpp
src/framework/: application.hpp  helpers.hpp  module.hpp  shader.hpp
src/modules/: HelloWorld.hpp  HelloWorldDynamic.hpp  Textures.hpp  texturesExtendend.hpp
src/shaders/: fragment.txt  vertex.txt
src/shaders/HelloWorld/: fragment.frag  vertex.vert
src/shaders/HelloWorldDynamic/: fragment.frag
src/shaders/Textures/: fragment.frag
src/shaders/texturesExtended/: fragment.frag  vertex.vert
